--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,5 +1,5 @@
-$primary: #1223E6;
-$secondary: #09ebaf;
+$primary: #2E39BF;
+$secondary: #66ECAF;
 $light: #F2F2F2;
 
 $text: forma-djr-micro, sans-serif;
