--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -11,7 +11,7 @@ body {
 	font-size: 2rem;
 	line-height: 1.3em;
 	color: black;
-	background-color: $primary;
+	// background-color: $primary;
 	font-family: $text;
 	overflow-x: hidden;
 }
