add background color to footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1143,6 +1143,7 @@ main .contact .wrapper form button {
 
 footer {
   color: white;
+  background-color: #2E39BF;
   font-size: 1.4rem;
   line-height: 1em;
   text-align: center;
