--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -434,9 +434,11 @@ main {
 					transform: scale(1.1);
 				}
 
-				svg {
+				svg,
+				img {
 					height: 50px;
-					fill:$primary;
+					fill: $primary;
+					filter: invert(33%) sepia(34%) saturate(7424%) hue-rotate(229deg) brightness(72%) contrast(111%);
 				}
 
 				h4 {
