--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1072,13 +1072,20 @@ main .contact .wrapper .left ul {
   display: flex;
   margin: 20px 0 18px;
 }
-main .contact .wrapper .left ul svg {
+main .contact .wrapper .left ul svg,
+main .contact .wrapper .left ul img {
   width: 25px;
   margin-right: 15px;
   fill: #66ECAF;
+  -webkit-filter: invert(77%) sepia(31%) saturate(612%) hue-rotate(99deg) brightness(101%) contrast(92%);
+          filter: invert(77%) sepia(31%) saturate(612%) hue-rotate(99deg) brightness(101%) contrast(92%);
 }
-main .contact .wrapper .left ul svg:hover, main .contact .wrapper .left ul svg:focus {
+main .contact .wrapper .left ul svg:hover, main .contact .wrapper .left ul svg:focus,
+main .contact .wrapper .left ul img:hover,
+main .contact .wrapper .left ul img:focus {
   fill: #2E39BF;
+  -webkit-filter: invert(33%) sepia(34%) saturate(7424%) hue-rotate(229deg) brightness(72%) contrast(111%);
+          filter: invert(33%) sepia(34%) saturate(7424%) hue-rotate(229deg) brightness(72%) contrast(111%);
 }
 main .contact .wrapper .right {
   -ms-flex-preferred-size: 55%;
