--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -837,3 +837,32 @@ footer {
 	text-align: center;
 	padding: 20px 20px 17px;
 }
+
+.before-and-after {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 40px;
+	margin-bottom: 50px;
+	section {
+		width: calc(50% - 40px);
+		border: none
+	}
+	.container {
+		position: relative;
+		height: 400px;
+		margin-top: 20px;
+		border: 2px solid white;
+		.img {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-size: cover;
+		}
+		.foreground-img {
+			width: 50%;
+		}
+	}
+}
