--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,6 +213,37 @@ textarea {
   overflow: hidden;
 }
 
+.slider {
+  position: absolute;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  width: 100%;
+  height: 100%;
+  background: rgba(242, 242, 242, 0);
+  outline: none;
+  margin: 0;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 6px;
+  height: 400px;
+  background: white;
+  cursor: pointer;
+}
+
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -1150,4 +1181,39 @@ footer {
   line-height: 1em;
   text-align: center;
   padding: 20px 20px 17px;
+}
+
+.before-and-after {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 40px;
+  margin-bottom: 50px;
+}
+.before-and-after section {
+  width: calc(50% - 40px);
+  border: none;
+}
+.before-and-after .container {
+  position: relative;
+  height: 400px;
+  margin-top: 20px;
+  border: 2px solid white;
+}
+.before-and-after .container .img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
+.before-and-after .container .foreground-img {
+  width: 50%;
 }
