--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,37 +213,6 @@ textarea {
   overflow: hidden;
 }
 
-.slider {
-  position: absolute;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-  width: 100%;
-  height: 100%;
-  background: rgba(242, 242, 242, 0);
-  outline: none;
-  margin: 0;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 6px;
-  height: 400px;
-  background: white;
-  cursor: pointer;
-}
-
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -1193,27 +1162,104 @@ footer {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 40px;
-  margin-bottom: 50px;
-}
-.before-and-after section {
-  width: calc(50% - 40px);
+  gap: 60px;
+  margin-bottom: 100px;
   border: none;
 }
-.before-and-after .container {
-  position: relative;
-  height: 400px;
-  margin-top: 20px;
-  border: 2px solid white;
+.before-and-after h2 {
+  font-family: forma-djr-micro, sans-serif;
+  font-size: 2.8rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
 }
-.before-and-after .container .img {
+.before-and-after div {
+  width: 100%;
+}
+.before-and-after div .slider-container {
+  position: relative;
+  width: 1140px;
+  height: 597px;
+  margin-top: 20px;
+}
+.before-and-after div .slider-container .img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
+  background-size: 1140px 100%;
 }
-.before-and-after .container .foreground-img {
+.before-and-after div .slider-container .foreground-img {
   width: 50%;
+}
+.before-and-after div .slider-container .slider {
+  position: absolute;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  width: 100%;
+  height: 100%;
+  background: none;
+  outline: none;
+  margin: 0;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.before-and-after div .slider-container .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 6px;
+  height: 597px;
+  background: #2E39BF;
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+.before-and-after div .slider-container .slider-button {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+  pointer-events: none;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #2E39BF;
+  left: calc(50% - 15px);
+  top: calc(50% - 18px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.before-and-after div .slider-container .slider-button:after {
+  content: "";
+  padding: 3px;
+  display: inline-block;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.before-and-after div .slider-container .slider-button:before {
+  content: "";
+  padding: 3px;
+  display: inline-block;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
 }
