resize images and add light mode

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -862,6 +862,7 @@ footer {
 			width: 1140px;
 			height: 597px;
 			margin-top: 20px;
+			border: 1px solid #efefef;
 			.img {
 				position: absolute;
 				top: 0;
