--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1183,6 +1183,18 @@ footer {
   margin-top: 20px;
   border: 1px solid #efefef;
 }
+@media (max-width: 1200px) {
+  .before-and-after div .slider-container {
+    width: 710px;
+    height: 374px;
+  }
+}
+@media (max-width: 820px) {
+  .before-and-after div .slider-container {
+    width: 350px;
+    height: 184px;
+  }
+}
 .before-and-after div .slider-container .img {
   position: absolute;
   top: 0;
@@ -1190,6 +1202,16 @@ footer {
   width: 100%;
   height: 100%;
   background-size: 1140px 100%;
+}
+@media (max-width: 1200px) {
+  .before-and-after div .slider-container .img {
+    background-size: 710px 100%;
+  }
+}
+@media (max-width: 820px) {
+  .before-and-after div .slider-container .img {
+    background-size: 350px 100%;
+  }
 }
 .before-and-after div .slider-container .foreground-img {
   width: 50%;
@@ -1220,10 +1242,20 @@ footer {
   -webkit-appearance: none;
   appearance: none;
   width: 6px;
-  height: 597px;
+  height: 595px;
   background: #2E39BF;
   cursor: -webkit-grabbing;
   cursor: grabbing;
+}
+@media (max-width: 1200px) {
+  .before-and-after div .slider-container .slider::-webkit-slider-thumb {
+    height: 372px;
+  }
+}
+@media (max-width: 820px) {
+  .before-and-after div .slider-container .slider::-webkit-slider-thumb {
+    height: 182px;
+  }
 }
 .before-and-after div .slider-container .slider-button {
   cursor: -webkit-grabbing;
