--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1257,6 +1257,28 @@ footer {
     height: 182px;
   }
 }
+.before-and-after div .slider-container .slider::-moz-range-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  outline: none;
+  border-radius: 0;
+  border: none;
+  width: 6px;
+  height: 595px;
+  background: #2E39BF;
+  cursor: grabbing;
+}
+@media (max-width: 1200px) {
+  .before-and-after div .slider-container .slider::-moz-range-thumb {
+    height: 372px;
+  }
+}
+@media (max-width: 820px) {
+  .before-and-after div .slider-container .slider::-moz-range-thumb {
+    height: 182px;
+  }
+}
 .before-and-after div .slider-container .slider-button {
   cursor: -webkit-grabbing;
   cursor: grabbing;
