update links and link styles

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -168,7 +168,7 @@ header {
 		}
 
 		h2 {
-			font-size: 2.4rem;
+			font-size: 3rem;
 			margin: -5px 0 30px;
 			text-align: center;
 		}
@@ -258,6 +258,14 @@ main {
 			@include mobile {
 				flex-direction: column;
 				flex-wrap: nowrap;
+			}
+
+			h4,
+			li,
+			p {
+				a {
+					text-decoration: underline;
+				}
 			}
 
 			.left,
